k8s/aws/service001.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testserver
spec:
  selector:
    matchLabels:
      app: testserver
  replicas: 1
  template:
    metadata:
      labels:
        app: testserver
    spec:
      containers:
        - image: bodnar1212/k8s:latest
          imagePullPolicy: Always
          name: testserver
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: testserver
spec:
  ports:
    - name: test-web-app-listener
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
  selector:
    app: testserver



#
#
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: brizy-api-php-deployment
#spec:
#  selector:
#    matchLabels:
#      app: brizy-api-php
#  replicas: 1
#  template:
#    metadata:
#      labels:
#        app: brizy-api-php
#    spec:
##      initContainers:
##        - name: mysql-migrations
##          image: brizy/api:php-dev
##          env:
##            - name: RUN_CMS_MIGRATIONS
##              value: 'true'
##            - name: DATABASE_URL
##              valueFrom:
##                configMapKeyRef:
##                  name: brizy-api-config
##                  key: symfony-database-url
##          command: [ 'bin/console' ]
##          args: [ 'doctrine:migrations:migrate', '--no-interaction', '--ansi' ]
#      containers:
##        - &main-container
#        - name: brizy-api-php
#          image: brizy/api:php-dev
#          ports:
#            - containerPort: 9000
#          env:
##            - name: APP_ENV
##              valueFrom:
##                configMapKeyRef:
##                  name: brizy-api-config
##                  key: symfony-env
##            - name: APP_SECRET
##              valueFrom:
##                secretKeyRef:
##                  name: brizy-api-secret
##                  key: symfony-app-secret
#            - name: CORS_ALLOW_ORIGIN
#              value: "^.+"
#            - name: DATABASE_URL
#              value: "mysql://brizy_cloud:Vuhodanasos2@beta.cupzc9ey0cip.us-east-1.rds.amazonaws.com:3306/brizy-cms"
#
##            - name: DATABASE_URL
##              valueFrom:
##                configMapKeyRef:
##                  name: brizy-api-config
##                  key: symfony-database-url
##            - name: MESSENGER_TRANSPORT_DSN
##              valueFrom:
##                configMapKeyRef:
##                  name: brizy-api-config
##                  key: symfony-messenger-url
##            - name: APP_ELASTIC_URL
##              value: "http://brizy-api-elastic:9200"
##            - name: OAUTH2_PRIVATE_KEY_PATH
##              value: "/var/secrets/oauth/private.key"
##            - name: OAUTH2_PUBLIC_KEY_PATH
##              value: "/var/secrets/oauth/public.key"
##          volumeMounts:
##            - name: secrets
##              mountPath: "/var/secrets"
##              readOnly: true
##        - <<: *main-container
##          name: brizy-api-php-worker
##          ports: []
##          args: [ 'bin/workers/messenger-consume', '-vv' ]
##      volumes:
##        - name: secrets
##          secret:
##            secretName: brizy-api-secret
##            items:
##              - key: oauth-private-key
##                path: "oauth/private.key"
##              - key: oauth-public-key
##                path: "oauth/public.key"
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: brizy-api-php
#spec:
#  type: ClusterIP
#  selector:
#    app: brizy-api-php
#  ports:
#    - port: 9000
#      targetPort: 9000
#
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: brizy-api-nginx-deployment
#spec:
#  selector:
#    matchLabels:
#      app: brizy-api-nginx
#  replicas: 1
#  template:
#    metadata:
#      labels:
#        app: brizy-api-nginx
#    spec:
#      containers:
#        - name: brizy-api-nginx
#          image: 'brizy/api:nginx-dev'
#          ports:
#            - containerPort: 80
#          env:
#            - name: BRIZY_API_HOST
#              value: "brizy-api-php"
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: brizy-api-nginx
#spec:
#  type: ClusterIP
#  selector:
#    app: brizy-api-nginx
#  ports:
#    - port: 80
#      targetPort: 80
