k8s/aws/ingress-aws.yml
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: echoserver
#  annotations:
#    kubernetes.io/ingress.class: alb
#    alb.ingress.kubernetes.io/actions.response-503: '{"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"503","messageBody":"Unknown Host"}}'
#    alb.ingress.kubernetes.io/scheme: internet-facing
#    alb.ingress.kubernetes.io/target-type: ip
#    alb.ingress.kubernetes.io/subnets: subnet-370b4e3b,subnet-5774317b,subnet-5d9ce107,subnet-ca370982,subnet-fd915499
#    alb.ingress.kubernetes.io/tags: Environment=dev
#    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
#    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
#    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:137169526694:certificate/db4c7160-2e4c-408a-8029-9b929931ab6d
#spec:
#  backend:
#    serviceName: response-503
#    servicePort: use-annotation
#  rules:
#    - host: www.myleads.website
#      http:
#        paths:
#          - backend:
#              serviceName: ssl-redirect
#              servicePort: use-annotation
#          - backend:
#              serviceName: brizy-api-nginx
#              servicePort: 80

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testserver
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-370b4e3b,subnet-5774317b,subnet-5d9ce107,subnet-ca370982,subnet-fd915499
    alb.ingress.kubernetes.io/tags: Environment=dev
spec:
  backend:
    serviceName: testserver
    servicePort: 80
